speaker note changes

--- a/_lessons/polish-project.html
+++ b/_lessons/polish-project.html
@@ -32,7 +32,7 @@ class: subtitle
 
 ???
 ""  
-First we'll talk about polishing up your dbt code  
+First we'll talk about polishing up our dbt code  
 ""  
 --
 
@@ -40,7 +40,7 @@ i.e. the code in your `.sql` and `.yml` files
 
 ???
 ""  
-When we say 'code', we mean the content of your .sql and .yml files.  
+When we say 'code', we mean the contents of our .sql and .yml files.  
 ""  
 
 ---
@@ -69,8 +69,8 @@ Note - You can follow dbt releases on GitHub:
 
 ???
 ""  
-Pin yourself to a version - in our dbt_project.yml, we can set a configuration  
-to do this called `require-dbt-version`.  
+It's best practice to require a dbt version to prevent conflicts. We do this by  
+setting a configuration called `require-dbt-version`.  
   
 In our example, our project works with versions later than or equal to 0.17.1  
 and less than 0.19.0. By requiring this, you are ensuring other developers are  
