--- a/_lessons/polish-project.html
+++ b/_lessons/polish-project.html
@@ -200,8 +200,8 @@ Apply configurations at the group level.
 
 ???
 ""  
-You can see here that we have two staging models, customer and orders, which  
-have the same configuration to materialize as a view.  
+You can see here that we have two staging models: customers and orders. They  
+have the same configuration to materialize them as views.  
 ""  
 ---
 ## Apply configurations at the group level
