Changed speaker notes

--- a/_lessons/polish-project.html
+++ b/_lessons/polish-project.html
@@ -307,7 +307,7 @@ PR templates help you write better PRs (and are great tools for reviewers!)
 
 ???
 ""  
-Another thing we use: PR templates. These prefill a pull request  
+Add a PR template. These prefill a pull request  
 description with headers to prompt the developer for the right information.  
 They're created with markdown, so you can use helpful things such as checklists  
 to ensure developers are polishing up their code before requesting a review.  
