add icon and notes to suggest demo on this slide

--- a/_lessons/docs.html
+++ b/_lessons/docs.html
@@ -167,6 +167,25 @@ One of the following values:
 ]
 {% endraw %}
 
+--
+
+<img src="/ui/img/dbt-standalone-new.png" style="width: 65%;" class="img-right">
+
+???
+Demo Time:
+- "Let's see that in action!"
+- add regular model and/or column descriptions to your yml file
+- run `dbt docs generate`
+- show where those end up in the docs
+
+- add a doc block file `order_status.md`
+- paste in the above markdown code ensuring to add newline white spaces
+- add description: "{{ doc('order_status') }}"
+- run `dbt docs generate`
+- within docs, find the doc block and talk about it
+- talk through all the other data shown (metadata, columns, types)
+- talk through DAG / lineage graph and model selection syntax
+
 ---
 # Generating documentation
 .denser-text[
