--- a/_lessons/testing.html
+++ b/_lessons/testing.html
@@ -303,6 +303,16 @@ models:
 * Automated: When you run dbt on a schedule
 * Automated: When you want to merge your code
 
+--
+<img src="/ui/img/dbt-standalone-new.png" style="width: 65%;" class="img-right">
+
+???
+Demo Time:
+- "Let's see tests in action!"
+- run `dbt test`
+- run `dbt test -s customers`
+- show details tab with compiled SQL
+
 ---
 
 class: subtitle
