--- a/_lessons/dbt-fundamentals.html
+++ b/_lessons/dbt-fundamentals.html
@@ -160,6 +160,13 @@ See if anyone wants to have a go at explaining a model
 <img src="/ui/img{{page.id}}/model.png" style="width: 50%;">
 ]
 
+--
+<img src="/ui/img/dbt-standalone-new.png" style="width: 65%;" class="img-right">
+
+???
+Demo Time:
+- jump into cloud and talk about model files, folder structure, what a dbt run command does, etc.
+
 ---
 # To use dbt you need:
 1. .grey[A data warehouse]
@@ -291,8 +298,22 @@ Snowflake console
     * `tags: ['nightly', 'hourly']`
     * `enabled: True`
 
+
+--
+<img src="/ui/img/dbt-standalone-new.png" style="width: 65%;" class="img-right">
+
 ???
-* Show changing configurations, esp. examples that highlight hierarchical nature
+Demo Time:
+- "Let's see configurations in action!"
+- show dbt_project.yml materialization
+- run `dbt run`
+- show staging model DDL stating view
+
+Now let's do an example that highlights hierarchical nature, showing that more specific configurations take precedence
+- add a config blocks in a file with a different materialization (e.g. staging file materialized as a table)
+- run `dbt run`
+- show staging model DDL stating table
+
 ---
 # What happens when you `dbt run`?
 1. dbt connects to your **data warehouse** (via a **profile**/**connection**)
