--- a/_lessons/deployment.html
+++ b/_lessons/deployment.html
@@ -82,6 +82,22 @@ The scheduler in dbt Cloud is purpose built for running dbt jobs on a schedule.
 ---
 <img src="/ui/img{{page.id}}/dbt-cloud.png" style="width: 100%;">
 
+???
+- This is what your Home Dashboard will look like once you have jobs running in Production.
+- You'll see successes, errors, etc. and you can click through each invocation of a job for more information.
+
+---
+<img src="/ui/img/dbt-standalone-new.png" style="width: 65%;" class="img-center">
+
+???
+Demo Time:
+- walk through development environment
+- add deployment environment
+- create a new job
+- run job
+- set up notifications for a job
+- create a slim CI job
+- mention environment variables and injecting logic into your SQL with jinja if blocks
 
 ---
 
