test pixel width

--- a/_lessons/dbt-fundamentals.html
+++ b/_lessons/dbt-fundamentals.html
@@ -161,7 +161,7 @@ See if anyone wants to have a go at explaining a model
 ]
 
 --
-<img src="/ui/img/dbt-standalone-new.png" style="width: 65%;" class="img-right">
+<img src="/ui/img/dbt-standalone-new.png" style="width:42" class="img-right">
 
 ???
 Demo Time:
