swap back to % but change to new slide

--- a/_lessons/dbt-fundamentals.html
+++ b/_lessons/dbt-fundamentals.html
@@ -160,8 +160,10 @@ See if anyone wants to have a go at explaining a model
 <img src="/ui/img{{page.id}}/model.png" style="width: 50%;">
 ]
 
---
-<img src="/ui/img/dbt-standalone-new.png" style="width:42" class="img-right">
+---
+
+## demo
+<img src="/ui/img/dbt-standalone-new.png" style="width: 65%;" class="img-right">
 
 ???
 Demo Time:
