less % more center

--- a/_lessons/dbt-fundamentals.html
+++ b/_lessons/dbt-fundamentals.html
@@ -163,7 +163,7 @@ See if anyone wants to have a go at explaining a model
 ---
 
 ## demo
-<img src="/ui/img/dbt-standalone-new.png" style="width: 65%;" class="img-right">
+<img src="/ui/img/dbt-standalone-new.png" style="width: 50%;" class="img-cetner">
 
 ???
 Demo Time:
