--- a/_lessons/dbt-fundamentals.html
+++ b/_lessons/dbt-fundamentals.html
@@ -163,7 +163,8 @@ See if anyone wants to have a go at explaining a model
 ---
 
 ## demo
-<img src="/ui/img/dbt-standalone-new.png" style="width: 50%;" class="img-cetner">
+
+<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;height: 30%;" class="img-center">
 
 ???
 Demo Time:
