remove height, add new lines

--- a/_lessons/dbt-fundamentals.html
+++ b/_lessons/dbt-fundamentals.html
@@ -164,7 +164,9 @@ See if anyone wants to have a go at explaining a model
 
 ## demo
 
-<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;height: 30%;" class="img-center">
+
+
+<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;" class="img-center">
 
 ???
 Demo Time:
