--- a/_lessons/dbt-fundamentals.html
+++ b/_lessons/dbt-fundamentals.html
@@ -166,7 +166,7 @@ See if anyone wants to have a go at explaining a model
 
 
 
-<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;" class="img-center">
+<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;" class="verticalhorizontal">
 
 ???
 Demo Time:
