try multiple variations at once

--- a/_lessons/dbt-fundamentals.html
+++ b/_lessons/dbt-fundamentals.html
@@ -162,11 +162,38 @@ See if anyone wants to have a go at explaining a model
 
 ---
 
-## demo
+## demo1
 
 
+.center-block [
+<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;" class="img-center-block">
+]
 
-<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;" class="verticalhorizontal">
+???
+Demo Time:
+- jump into cloud and talk about model files, folder structure, what a dbt run command does, etc.
+
+---
+
+## demo2
+
+
+.center[
+<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;">
+]
+
+???
+Demo Time:
+- jump into cloud and talk about model files, folder structure, what a dbt run command does, etc.
+
+---
+
+## demo3
+
+
+.center[
+<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;" class="img-center">
+]
 
 ???
 Demo Time:
