--- a/_lessons/dbt-fundamentals.html
+++ b/_lessons/dbt-fundamentals.html
@@ -165,9 +165,10 @@ See if anyone wants to have a go at explaining a model
 ## demo1
 
 
-.center-block [
+<br>
+<br>
 <img src="/ui/img/dbt-standalone-new.png" style="width: 20%;" class="img-center-block">
-]
+
 
 ???
 Demo Time:
@@ -192,8 +193,22 @@ Demo Time:
 
 
 .center[
-<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;" class="img-center">
+<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;" class="center-block img-responsive">
 ]
+
+
+???
+Demo Time:
+- jump into cloud and talk about model files, folder structure, what a dbt run command does, etc.
+
+---
+
+## demo4
+
+
+<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;" class="center-block img-responsive">
+
+
 
 ???
 Demo Time:
