--- a/_lessons/dbt-fundamentals.html
+++ b/_lessons/dbt-fundamentals.html
@@ -167,7 +167,7 @@ See if anyone wants to have a go at explaining a model
 
 <br>
 <br>
-<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;" class="img-center-block">
+<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;" class="img-center">
 
 
 ???
@@ -178,7 +178,8 @@ Demo Time:
 
 ## demo2
 
-
+<br>
+<br>
 .center[
 <img src="/ui/img/dbt-standalone-new.png" style="width: 20%;">
 ]
@@ -191,23 +192,11 @@ Demo Time:
 
 ## demo3
 
-
+<br>
+<br>
 .center[
 <img src="/ui/img/dbt-standalone-new.png" style="width: 20%;" class="center-block img-responsive">
 ]
-
-
-???
-Demo Time:
-- jump into cloud and talk about model files, folder structure, what a dbt run command does, etc.
-
----
-
-## demo4
-
-
-<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;" class="center-block img-responsive">
-
 
 
 ???
