convert all to a new demo slide reminder

--- a/_lessons/docs.html
+++ b/_lessons/docs.html
@@ -167,9 +167,14 @@ One of the following values:
 ]
 {% endraw %}
 
---
+---
+## demo
 
-<img src="/ui/img/dbt-standalone-new.png" style="width: 65%;" class="img-right">
+<br>
+<br>
+.center[
+<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;">
+]
 
 ???
 Demo Time:
