--- a/_lessons/sources.html
+++ b/_lessons/sources.html
@@ -119,8 +119,14 @@ renamed as (
 ```
 ]
 
---
-<img src="/ui/img/dbt-standalone-new.png" style="width: 65%;" class="img-right">
+---
+## demo
+
+<br>
+<br>
+.center[
+<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;">
+]
 
 ???
 Demo Time:
@@ -176,8 +182,14 @@ This allows you to debug more quickly!
 
 ]
 
---
-<img src="/ui/img/dbt-standalone-new.png" style="width: 65%;" class="img-right">
+---
+## demo
+
+<br>
+<br>
+.center[
+<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;">
+]
 
 ???
 Demo Time:
@@ -195,8 +207,14 @@ We can run tests on _only_ sources with the following command
 
 This can be helpful in deployment - coming up soon
 
---
-<img src="/ui/img/dbt-standalone-new.png" style="width: 65%;" class="img-right">
+---
+## demo
+
+<br>
+<br>
+.center[
+<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;">
+]
 
 ???
 Demo Time:
@@ -284,7 +302,13 @@ from raw.stripe.payment
 ]
 
 ---
-<img src="/ui/img/dbt-standalone-new.png" style="width: 65%;" class="img-center">
+## demo
+
+<br>
+<br>
+.center[
+<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;">
+]
 
 ???
 Demo Time:
