--- a/_lessons/testing.html
+++ b/_lessons/testing.html
@@ -303,8 +303,14 @@ models:
 * Automated: When you run dbt on a schedule
 * Automated: When you want to merge your code
 
---
-<img src="/ui/img/dbt-standalone-new.png" style="width: 65%;" class="img-right">
+---
+## demo
+
+<br>
+<br>
+.center[
+<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;">
+]
 
 ???
 Demo Time:
