--- a/_lessons/dbt-fundamentals.html
+++ b/_lessons/dbt-fundamentals.html
@@ -161,43 +161,13 @@ See if anyone wants to have a go at explaining a model
 ]
 
 ---
-
-## demo1
-
-
-<br>
-<br>
-<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;" class="img-center">
-
-
-???
-Demo Time:
-- jump into cloud and talk about model files, folder structure, what a dbt run command does, etc.
-
----
-
-## demo2
+## demo
 
 <br>
 <br>
 .center[
 <img src="/ui/img/dbt-standalone-new.png" style="width: 20%;">
 ]
-
-???
-Demo Time:
-- jump into cloud and talk about model files, folder structure, what a dbt run command does, etc.
-
----
-
-## demo3
-
-<br>
-<br>
-.center[
-<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;" class="center-block img-responsive">
-]
-
 
 ???
 Demo Time:
@@ -334,9 +304,14 @@ Snowflake console
     * `tags: ['nightly', 'hourly']`
     * `enabled: True`
 
+---
+## demo
 
---
-<img src="/ui/img/dbt-standalone-new.png" style="width: 65%;" class="img-right">
+<br>
+<br>
+.center[
+<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;">
+]
 
 ???
 Demo Time:
