--- a/_lessons/deployment.html
+++ b/_lessons/deployment.html
@@ -87,7 +87,13 @@ The scheduler in dbt Cloud is purpose built for running dbt jobs on a schedule.
 - You'll see successes, errors, etc. and you can click through each invocation of a job for more information.
 
 ---
-<img src="/ui/img/dbt-standalone-new.png" style="width: 65%;" class="img-center">
+## demo
+
+<br>
+<br>
+.center[
+<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;">
+]
 
 ???
 Demo Time:
