--- a/_lessons/packages.html
+++ b/_lessons/packages.html
@@ -61,9 +61,14 @@ Note: you can also install a package from a git URL, or from a local directory.
 ```shell
 $ dbt deps
 ```
---
+---
+## demo
 
-<img src="/ui/img/dbt-standalone-new.png" style="width: 65%;" class="img-right">
+<br>
+<br>
+.center[
+<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;">
+]
 
 ???
 Demo Time:
@@ -71,6 +76,7 @@ Demo Time:
 * run `dbt deps` command
 * Show the  modules directory
 * Note that these are .gitignored
+
 ---
 ## Use case: Using macros from a package
 
@@ -91,9 +97,14 @@ Demo Time:
 ```
 {% endraw %}
 
---
+---
+## demo
 
-<img src="/ui/img/dbt-standalone-new.png" style="width: 65%;" class="img-right">
+<br>
+<br>
+.center[
+<img src="/ui/img/dbt-standalone-new.png" style="width: 20%;">
+]
 
 ???
 Demo Time:
