formatting and minor changes

--- a/_lessons/sources.html
+++ b/_lessons/sources.html
@@ -195,7 +195,7 @@ This allows you to debug more quickly!
 Demo Time:
 - add tests to your sources.yml
 - run `dbt test`
-- 
+- Acknowledge this will run all tests (models and sources)
 
 ---
 
