html does not like curlies

--- a/_lessons/docs.html
+++ b/_lessons/docs.html
@@ -188,7 +188,7 @@ Regular docs:
 Doc blocks:
 - add a doc block file `order_status.md`
 - paste in the above markdown code ensuring to add newline white spaces
-- add description: `"{{ doc('order_status') }}"`
+- add description: `"&#123;&#123; doc('order_status') &#125;&#125;"`
 - run `dbt docs generate`
 - within docs, find the doc block and talk about it
 - talk through all the other data shown (metadata, columns, types)
