command formatting isn't great, so add better line syntax

--- a/_lessons/packages.html
+++ b/_lessons/packages.html
@@ -107,7 +107,7 @@ models:
 ## Q: What happens when you add a package that contains models?
 --
 
-These models get added to your project and will be run when you `dbt run`!
+These models get added to your project and will be run when you the command: `dbt run`!
 
 ---
 background-color: #005E7A
