--- a/_lessons/techniques-trade-mod.html
+++ b/_lessons/techniques-trade-mod.html
@@ -184,8 +184,8 @@ This is the exact same process every Monday morning.
 dbt Cloud empowers users to run their dbt project on a schedule. This can be any sequence of dbt commands.
 
 Typically includes:
-- dbt run
-- dbt test
+- `dbt run`
+- `dbt test`
 
 ---
 
@@ -253,7 +253,7 @@ If you use dbt Cloud, you can also check an exposure's status:
 
 # ❓ Can I change a model to be built as a table instead of a view?
 
-Whenever I run dbt run, all my models are built as views.
+Whenever I run the command: `dbt run`, all my models are built as views.
 
 I'd love to build these as tables instead.
 
