--- a/_lessons/testing.html
+++ b/_lessons/testing.html
@@ -112,7 +112,7 @@ Run specific tests: `dbt test -s one_specific_model`
 
 ---
 
-# What happens when you run `dbt test`?
+# What happens when you run the command: `dbt test`?
 
 1. dbt connection to your **data warehouse** (via a **profile/connection**)
 2. dbt parses your **dbt project**
