--- a/_lessons/working-group-1.html
+++ b/_lessons/working-group-1.html
@@ -24,4 +24,4 @@ select * from raw.jaffle_shop.orders;
 Notes for what to walk students through
 * Give them a brief tour of the IDE: the file tree, file editor, the "Preview Data" and "Compile SQL" buttons, the results tab, and command line.
 * When creating the staging models explain that best practice is to create one staging model per raw data table and to do some minimal cleanup and re-naming.
-* For each model created, run dbt run and look at the logs to talk through what is happening.
+* For each model created, run the command: `dbt run` and look at the logs to talk through what is happening.
