remove references to fishtown
this one still exists -- where should this go? https://github.com/fishtown-analytics/dbt-learn-demo-v2

--- a/_lessons/materializations.html
+++ b/_lessons/materializations.html
@@ -44,7 +44,7 @@ class: title, center, middle
 ### You can write your own!
 
 - Just like you can write your own macros, schema tests, etc.
-- E.g. ["insert by period"](https://github.com/fishtown-analytics/dbt-utils#materializations)
+- E.g. ["insert by period"](https://github.com/dbt-labs/dbt-utils#materializations)
 
 ]
 
