--- a/_lessons/dbt-fundamentals.html
+++ b/_lessons/dbt-fundamentals.html
@@ -216,7 +216,7 @@ Good knowledge check questions:
 4. A command
 
 ---
-# What happens when you the command: `dbt run`?
+# What happens when you run the command: `dbt run`?
 1. dbt connects to your **data warehouse** (via a **profile**/**connection**)
 2. dbt parses your **dbt project**
 3. dbt wraps your **models** in the appropriate DDL/DML (e.g. `create table as`)
