--- a/_lessons/working-group-2.html
+++ b/_lessons/working-group-2.html
@@ -45,7 +45,7 @@ select * from raw.stripe.payment
     * `customers.lifetime_value`: the total amount a customer has spent at `jaffle_shop`
 ]
 
-By the way, the Excel spreadsheet I've been using to raise venture capital says my all-time revenue is $1 672.
+By the way, the Excel spreadsheet I've been using to raise venture capital says my all-time revenue is $1,672.
 
 ???
 Discussion points (leading questions for the next session)
@@ -54,6 +54,6 @@ Where did our data come from? How do we know that?
 * All of it was in the `raw` database
 * Grouped into schemas based on the source
 
-When building your models:
+When building your models
 * What did you name the files?
 * How did you organize them in your models directory?
