First pass at changes for all Working Groups

--- a/_lessons/working-group-3.html
+++ b/_lessons/working-group-3.html
@@ -6,12 +6,17 @@ title: Working Group 3
 class: subtitle
 # Working session 3
 .dense-text[
-1. Create a `sources.yml` file to configure sources for the three raw tables in your project. 
+1. Re-organize your models folder to follow dbt's best practices for project design.
+    a. Under the models/staging folder, create one subfolder for jaffle_shop and one for stripe.
+    b. Move the respective staging models files into these new subfolders.
+    c. Create a new directories marts/core under models.
+    d. Move the respective models into this new subfolder.
+2. Create schema yml files.
+    a. Add **unique** and **not null** tests to all primary keys.
+    b. Add descriptions to all columns in customers.
+3. Create sources yml files to configure sources for the three raw tables in your project. 
     a. Refactor your staging models to use the source function.
     b. Add a test to at least one column in one of the source tables.
-2. Create a `schema.yml` file.
-    a. Add **unique** and **not null** tests to all primary keys (across all 5 models and 3 source tables).
-    b. Add descriptions to all columns in customers.
 3. Finish early?
     a. Add a docs block.
     b. Add source freshness to one of your sources.
@@ -19,5 +24,6 @@ class: subtitle
 ]
 
 ???
-    * After students finish step 1, show them how the Lineage tab now shows green nodes for sources.
     * After step 2, have students run `dbt test` and `dbt docs generate`. Show the docs site.
+    * After step 3, show them how the Lineage tab now shows green nodes for sources.    
+   
