Adding back width to image in WG2

--- a/_lessons/working-group-2.html
+++ b/_lessons/working-group-2.html
@@ -8,7 +8,7 @@ We just got some payment data into our warehouse:
 
 `select * from raw.stripe.payment`
 
-<img src="/ui/img/raw_payment_data.png" class="img-center">
+<img src="/ui/img/raw_payment_data.png" style="width: 100%;" class="img-center">
 
 
 ???
