--- a/_lessons/who-is-analytics-engineer.html
+++ b/_lessons/who-is-analytics-engineer.html
@@ -39,7 +39,7 @@ Note: Lots of custom engineering work. Distance between business stakeholders an
 
 ???
 - Reliable out of the box data loader tools like Stitch and Fivetran made it easy to get data into your warehouse, but the data is in a source conformed format.
-- MPP (massively parallel processing) warehouses such as Snowlfake, Redshift, and BigQuery replaced the need for engineers to maintain warehouse infrastructures.
+- MPP (massively parallel processing) warehouses such as Snowflake, Redshift, and BigQuery replaced the need for engineers to maintain warehouse infrastructures.
 - BI tools (Looker, Mode, and others) allowed analysts and consumers to do their own deep dives into data.
 - The combination of these tools is what we call the modern data stack and it has created huge improvements for data teams however with great power comes great responsibility. 
 - Problem: people only had access to the raw data
