Changed to explicit demo

--- a/_lessons/polish-project.html
+++ b/_lessons/polish-project.html
@@ -82,15 +82,15 @@ environment, which configures the version that developers use when they access
 the `develop` tab to make changes.  
 ""  
   
-[Teacher Notes:]  
-You can take a moment here to exemplify what happens when you add this config.  
+[Demo:]  
+Exemplify what happens when you add this config.  
 You should hit these points:  
 - How does a dbt run function when your version is within the requirements?
 - How does a dbt run function when your version is out of the requirements?
+  - You get an error. Click on the status (with the "light") in the bottom right corner
+  - Scroll to the bottom of the error message when it pops up.
+  - Show the error that explains the project version requirements.
   
-You'll need to click on the status in the bottom right corner and scroll all  
-the way down the error message to see the message where the version doesn't  
-meet the requirements.  
 ---
 ## Ensure you don't have any direct table references
 
