--- a/_lessons/working-group-2.html
+++ b/_lessons/working-group-2.html
@@ -6,18 +6,11 @@ class: subtitle
 # Working session 2
 We just got some payment data into our warehouse:
 
-```sql
-select * from raw.stripe.payment
->>>
-| ID | ORDERID | PAYMENTMETHOD | STATUS  | AMOUNT | CREATED    |
-|----|---------|---------------|---------|--------|------------|
-| 1  | 1       | credit_card   | success | 1000   | 2018-01-01 |
-| 2  | 2       | credit_card   | success | 2000   | 2018-01-02 |
-| 3  | 3       | coupon        | success | 100    | 2018-01-04 |
-| 4  | 4       | coupon        | success | 2500   | 2018-01-05 |
-| 5  | 5       | bank_transfer | fail    | 1700   | 2018-01-05 |
+`select * from raw.stripe.payment`
 
-```
+<img src="/ui/img/raw_payment_data.png" style="width: 100%;" class="img-center">
+
+
 ???
 Notes on the data (for teachers, hopefully the students discover some of these)
 * singular table name
@@ -45,7 +38,7 @@ select * from raw.stripe.payment
     * `customers.lifetime_value`: the total amount a customer has spent at `jaffle_shop`
 ]
 
-By the way, the Excel spreadsheet I've been using to raise venture capital says my all-time revenue is $1 672.
+By the way, the Excel spreadsheet I've been using to raise venture capital says my all-time revenue is $1,672.
 
 ???
 Discussion points (leading questions for the next session)
@@ -54,6 +47,6 @@ Where did our data come from? How do we know that?
 * All of it was in the `raw` database
 * Grouped into schemas based on the source
 
-When building your models:
+When building your models
 * What did you name the files?
 * How did you organize them in your models directory?
